# real-estate-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: launch.json
agents/home-finder/: Dockerfile
agents/home-finder/app/: main.py
agents/lead-intelligence/: Dockerfile  requirements.txt
agents/lead-intelligence/app/: main.py
agents/pricing-strategy/: Dockerfile
agents/pricing-strategy/app/: main.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ContactCard.tsx  HomeFinderResults.tsx  LeadScorePanel.tsx  Nav.tsx  PricingPanel.tsx  PropertyCard.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  types.ts
gateway/: Dockerfile  requirements.txt
gateway/app/: main.py
infra/kafka/: create-topics.sh
infra/litellm/: config.yaml
infra/postgres/: init-databases.sh
seed/: requirements.txt  seed_contacts.py  seed_market_data.py  seed_properties.py
services/crm-contact/: Dockerfile  requirements.txt
services/market-data/: Dockerfile  requirements.txt
services/property-listing/: Dockerfile
shared/: pyproject.toml
shared/shared/: config.py
shared/shared/database/: __init__.py  base.py  session.py
shared/shared/kafka/: __init__.py  consumer.py  producer.py
shared/shared/middleware/: error_handling.py  logging.py
shared/shared/schemas/: __init__.py  contact.py  events.py  market.py  property.py
tests/: conftest.py  test_crm_contact.py  test_lead_agent.py  test_pricing_agent.py  test_property_listing.py
(+41 files in other folders)
