[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "aiokafka>=0.12,<1",
    "httpx>=0.28,<1",
    "redis[hiredis]>=5.2,<6",
]

[tool.setuptools.packages.find]
where = ["."]
